# russdns

./: Cargo.toml  README.md  blocklist.txt  config.toml
src/: blocklist.rs  cache.rs  config.rs  main.rs  resolver.rs  server.rs
